--- a/src/pages/Error404/error.css
+++ b/src/pages/Error404/error.css
@@ -1,24 +1,55 @@
-.error_container {
-    padding-top: 150px;
-    margin-bottom: 150px;
-    min-height: 200px;
-}
-.error_container h1{
-    color: var(--wine);
-    font-family: Montserrat-Bold;
-}
-.error_container p{
-    color: var(--pink);
-}
-.error_container .btn_error{
-    background-color: var(--wine);
-    color: #fff;
-    border-radius: 10px;
-    padding: 2px 10px;
-    font-family: Montserrat-Bold;
-}
-@media (min-width: 577px) and (max-width: 820px){
-    .error_container{
-        min-height: 500px;
+.not-found-container {
+    margin-top: 100px; 
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  .not-found-title {
+    padding-top: 70px;
+    font-size: 120px;
+    font-weight: bold;
+    color: #691b31; 
+  }
+  
+  .not-found-subtitle {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #691b31;
+  }
+  
+  .not-found-text {
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  .not-found-button {
+    background-color: #ddc9a3; 
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: transform 0.2s ease-in-out, background-color 0.2s;
+  }
+  
+  .not-found-button:hover {
+    background-color: #bc955b; 
+    transform: scale(1.05);
+  }
+  @media (max-width: 768px) {
+    .not-found-title {
+      font-size: 80px;
     }
-}
+  
+    .not-found-subtitle {
+      font-size: 20px;
+    }
+  
+    .not-found-text {
+      font-size: 14px;
+    }
+  
+    .not-found-button {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+  }
+  
