--- a/src/components/ThemeSwitcher/themeSwitcher.css
+++ b/src/components/ThemeSwitcher/themeSwitcher.css
@@ -1,46 +1,18 @@
 .theme-switcher-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #ff5e57;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .theme-switcher-btn:hover {
-    background-color: #ff3c35;
-  }
-  
-  .snowflakes {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 999;
-    background-image: url("../../assets/snowflake.svg");
-    background-size: contain;
-    background-repeat: repeat;
-    animation: snowfall 10s linear infinite;
-  }
-  
-  @keyframes snowfall {
-    0% {
-      background-position: 0 -100%;
-    }
-    100% {
-      background-position: 0 100%;
-    }
-  }
-  
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.theme-switcher-btn:hover {
+  background-color: #ff3c35 !important;
+}
