--- a/src/components/Team1/team.css
+++ b/src/components/Team1/team.css
@@ -3,12 +3,14 @@
     padding: 5px;
     margin: 10px;
     text-align: center;
+    background-color: #d8c6c6;
   }
 .participante img {
-    width: 120px;
-    height: 100px;
-    border-radius: 50%;
+    width: 119px;
+    height: 110px;
+    border-radius: 49%;
     align-items: center;
+    background-color: rgb(234, 229, 238);
   }
 .rowParticipantes{
   row-gap: 1.5rem;
